--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>test</title>
   </head>
   <body>
-    Hello
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
   </body>
 </html>
