--- a/index.html
+++ b/index.html
@@ -8,4 +8,10 @@
     <h1>This is a heading</h1>
     <p>This is a paragraph.</p>
   </body>
+  <script>
+    console.log('hello, world');
+    for(var x=0; x<10; x++) {
+      console.log('hello, ' + x);
+    }
+  </script>
 </html>
