--- a/index.html
+++ b/index.html
@@ -8,10 +8,5 @@
     <h1>This is a heading</h1>
     <p>This is a paragraph.</p>
   </body>
-  <script>
-    console.log('hello, world');
-    for(var x=0; x<10; x++) {
-      console.log('hello, ' + x);
-    }
-  </script>
+  <script src="script/main.js" language="javascript"></script>
 </html>
